src/test/deca/context/valid/homemade/test/test312_nom_parametre_field.deca
// test valide de la règle 3.12

class Pinguin {
    float a;
    
    int calcul(int a) {
    }
}

