src/test/deca/context/invalid/homemade/tests/test317_variable/test317_variable_doubledef2.deca
// test invalide de la règle 3.17

{
    int a;
    float a;
}
